--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <!-- A-Frame core library -->
+    <!-- A-Frame core library00000000000000000 -->
     <!-- documentation:  https://aframe.io/ -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 
